# Notion-CLI

./: .env.example  AGENTS.md  Cargo.toml  README.md  install.sh
src/: client.rs  credentials.rs  main.rs
src/commands/: block.rs  comment.rs  database.rs  datasource.rs  file.rs  mod.rs  oauth.rs  page.rs  search.rs  token.rs  user.rs
